<resources>
    <string name="app_name">TallerGuayaquil</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="title_activity_menu">Menu</string>


    <!-- Strings related to  Error fields -->
    <string name="error_incorrect_text_field">Ingrese un texto válido</string>
    <string name="error_incorrect_number_field">Ingrese un número válido</string>


    <!-- Strings relato to progress message -->
    <string name="title_progress_validation_message">Verificando...</string>
    <string name="title_progress_signup_workshop">Registrando Taller... </string>
    <string name="title_progress_signup_person">Registrando Persona... </string>

    <!-- Strings related to registration user -->
    <string name="title_activity_registration_user">Registrar Usuario</string>


    <!-- Strings related to registration workshop -->
    <string name="title_activity_presentation_workshop">Registrar Taller</string>


    <!-- Strings related to action -->
    <string name="action_welcome">BIENVENIDO</string>
    <string name="action_user">Encuentra un Taller</string>
    <string name="action_workshop">Registra Tu Negocio</string>
    <string name="action_login">Iniciar Sesión</string>
    <string name="title_activity_action">Talleres Guayaquil</string>


    <!-- Strings related to login -->
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_len_password">Debe tener mínimo 6 caracteres</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Strings related to main -->
    <string name="title_activity_categorias">Categorias</string>


<<<<<<< HEAD
    <!-- Strings relalted to preferences -->
    <string name="preference_user_token">USER_TOKEN</string>
=======
    <!-- Strings related to map api-->
    <string name="google_android_map_api_key">AIzaSyAmAzTOZRyXsIGG2yWjOoghNJJCuwGX_Bo</string>


    <!-- Strings related to spinner -->
    <string name="type_to_search">Escriba para buscar</string>


    <!-- Strings related to network -->
    <string name="message_network_local_failed">Hubo problemas, revise su conexión a internet e intente nuevamente</string>
    <string name="message_network_connectivity_failed">No hay conexión a internet</string>

    <!-- Strings related to service -->
    <string name="message_service_server_empty">No se encontraron registros</string>
    <string name="message_service_server_failed">Hubo problemas, intente nuevamente en unos minutos</string>


    <!-- Strings related to user preferences -->
    <string name="preferences_person_id">USER_ID</string>
    <string name="preferences_person_type">USER_TYPE</string>
    <string name="preferences_person_first_name">PERSON_FIRST_NAME</string>
    <string name="preferences_person_last_name">PERSON_LAST_NAME</string>
    <string name="preferences_person_username">PERSON_USERNAME</string>
    <string name="preferences_person_email">PERSON_EMAIL</string>
    <string name="preferences_person_token">PERSON_TOKEN</string>
>>>>>>> master

    <string-array name="years">
        <item>Todo</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
    </string-array>

    <string-array name="cities">
        <item>Guayaquil</item>
    </string-array>

</resources>