<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/title_activity_action"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:onClick="iniciar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="signupPerson">

            <ImageView
                android:id="@+id/img_btncliente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:contentDescription="@string/title_activity_registration_user"
                android:background="@android:color/transparent"
                android:src="@drawable/reparacion" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/action_user"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="signupWorkShop">

            <ImageView
                android:id="@+id/img_btntaller"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:contentDescription="@string/title_activity_presentation_workshop"
                android:background="@android:color/transparent"
                android:src="@drawable/mecanico" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/action_workshop"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center"
            android:text="Ó"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/black"
            android:gravity="center_horizontal|center"
            android:onClick="login"
            android:text="@string/action_login"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>